--- a/client/src/main/res/layout/activity_aidl.xml
+++ b/client/src/main/res/layout/activity_aidl.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".TestAIDLActivity">
 
     <EditText
         android:id="@+id/et_show_out_message"
